Fixed bug not showing document links, and added default link to front end

--- a/ui/admin-portal/src/app/components/candidates/view/shareable-docs/shareable-docs.component.scss
+++ b/ui/admin-portal/src/app/components/candidates/view/shareable-docs/shareable-docs.component.scss
@@ -11,6 +11,6 @@
 }
 
 .font-15 {
-  font-size: 14px;
+  font-size: 15px;
   margin-bottom: 0.5rem;
 }
